--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
