--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.prod.js"
+    "start": "webpack --config webpack.prod.js",
+    "heroku-prebuild": "npm install"
   },
   "author": "",
   "license": "ISC",
